main/default/objects/SupplierCategory__c/SupplierCategory__c.object-meta.xml
<CustomObject>
    <description>Supplier Category</description>
    <label>SupplierCategory</label>
    <nameField>
        <displayFormat>SCT-{000000}</displayFormat>
        <label>SuppCatNo</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SupplierCategories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>