main/default/objects/SupplierCategory__c/fields/Actual_Spent__c.field-meta.xml
<CustomField>
    <fullName>Actual_Spent__c</fullName>
    <description>Actual Spent</description>
    <inlineHelpText>Actual Spent</inlineHelpText>
    <label>Actual Spent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>