main/default/objects/SupplierCategory__c/fields/Realized_Savings__c.field-meta.xml
<CustomField>
    <fullName>Realized_Savings__c</fullName>
    <description>Realized Savings</description>
    <inlineHelpText>Realized Savings</inlineHelpText>
    <label>Realized Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>