main/default/objects/SupplierCategory__c/fields/SubCategory__c.field-meta.xml
<CustomField>
    <fullName>SubCategory__c</fullName>
    <description>SubCategory</description>
    <inlineHelpText>SubCatego</inlineHelpText>
    <label>SubCategory</label>
    <referenceTo>SubCategory__c</referenceTo>
    <relationshipLabel>SupplierCategories</relationshipLabel>
    <relationshipName>SupplierCategories</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>