main/default/objects/SupplierCategory__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <description>Supplier</description>
    <inlineHelpText>Supplier</inlineHelpText>
    <label>Supplier</label>
    <referenceTo>Supplier__c</referenceTo>
    <relationshipLabel>SupplierCategories</relationshipLabel>
    <relationshipName>SupplierCategories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>